Bug 1022568 - Set appropriate text color on default and hovered buttons for high-contrast themes on Windows 8 and later. r=jimm
UltraBlame original commit: 2699eae6dafb4d8bf103988eb2aefa6a61770f97

--- a/toolkit/themes/windows/global/button.css
+++ b/toolkit/themes/windows/global/button.css
@@ -601,6 +601,66 @@ ThreeDHighlight
 ThreeDLightShadow
 ;
 }
+media
+not
+all
+and
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+media
+(
+-
+moz
+-
+windows
+-
+compositor
+)
+{
+/
+*
+This
+is
+for
+high
+-
+contrast
+themes
+on
+Windows
+8
+and
+later
+*
+/
+button
+[
+default
+=
+"
+true
+"
+]
+button
+:
+hover
+{
+color
+:
+HighlightText
+;
+}
+}
+}
 /
 *
 .
